fix: remove breakfast layout issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -953,7 +953,7 @@ footer > p {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    height: 40px;
+    min-height: 40px;
 }
 
 #modal-sweet-brunch .mas-informacion-producto {
